# GO-MELT

./: .gitignore  LICENSE  README.md  TimingRun.py  make_cube_tests.py  make_production_run.py  pyproject.toml  requirements-gpu.txt  requirements.txt  runTimingAnalysis.py  setup.py
examples/: HASTE_example.json  README.md  example.json  example_multilayer.json  example_unit.json  haste_boundary.json  haste_figure.json  haste_get_test.json  haste_inward_spiral_10x10.json  haste_inward_spiral_20x20.json  haste_outward_spiral_10x10.json  haste_outward_spiral_20x20.json  haste_production_100x10x10.json  haste_square_10x10.json  haste_square_20x20.json  haste_triangle_10x10.json  haste_triangle_10x20.json  haste_triangle_20x10.json  sample_input_1.json  sample_input_2.json  sample_laser_1.txt  sample_laser_2.txt  training_triangle_20x20.json  truth_boundary.json  truth_inward_spiral_10x10.json  truth_inward_spiral_20x20.json  truth_outward_spiral_10x10.json  truth_outward_spiral_20x20.json  truth_production_100x10x10.json  truth_square_10x10.json  truth_square_20x20.json  truth_triangle_10x10.json  truth_triangle_10x20.json  truth_triangle_20x10.json
go_melt/: README.md  computeFunctions.py  createPath.py  go_melt.py  hasteFunctions.py  run_go_melt.py  runtestMultiscale.py  testMultiscale.py
haste/: DMD.py  ProcessSurroTAMBridge.py  helpers.py  plotDMD.py  plot_DMDc_HASTE_contours.py  plot_cross_sections.py  plot_cross_sections_TAM.py  postprocess_timing.py  postprocessing_error.py  postprocessing_geometry.py
scripts/: install.py  install.sh
tests/: test_cli.py
(+314 files in other folders)
